mdapi_output/dev1/stericycleforms/objects/Recall__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recalls</relationshipLabel>
        <relationshipName>Recalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Did_you_become_sick_after_taking_Tylenol__c</fullName>
        <label>Did you become sick?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC__c</fullName>
        <label>NDC#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <label>Retailer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Best Buy</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_To__c</fullName>
        <label>Return To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptoms__c</fullName>
        <label>Symptoms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Recall</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Recall-{000000}</displayFormat>
        <label>Recall Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recalls</pluralLabel>
    <recordTypes>
        <fullName>Fitbitz</fullName>
        <active>true</active>
        <label>Fitbitz</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tylenolz</fullName>
        <active>true</active>
        <label>Tylenolz</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>